--- a/src/dbup-newprovider/dbup-newprovider.csproj
+++ b/src/dbup-newprovider/dbup-newprovider.csproj
@@ -6,7 +6,7 @@
     <Company>DbUp Contributors</Company>
     <Product>DbUp</Product>
     <Copyright>Copyright © DbUp Contributors 2015</Copyright>
-    <TargetFrameworks>netstandard1.3;netstandard2.0;net35;net45</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>dbup-newprovider</AssemblyName>
     <RootNamespace>DbUp.NewProvider</RootNamespace>
     <PackageId>dbup-newprovider</PackageId>
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="dbup-core" Version="5.0.37"/>
+    <PackageReference Include="dbup-core" Version="6.0.5" />
   </ItemGroup>
 
   <ItemGroup>
